Ofc it was a z-index issue... noted

--- a/style.css
+++ b/style.css
@@ -203,9 +203,9 @@ h1.project-desc {
 /* Page 3 - My Work */
 /* Page 4 - Contact Me */
 
-div.footer {
+div#contact {
 	background-color: #1f261f;
-	z-index: -2;
+	z-index: 5;
 	width: 100%;
 	height: 500px;
 	position: relative;
